--- a/Frontend/html/edit-event-page.html
+++ b/Frontend/html/edit-event-page.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <!--<script src="../js/go-to-auth-error-enter.js"></script>-->
+        <script src="../js/go-to-auth-error-enter.js"></script>
         <script src="https://api-maps.yandex.ru/2.1/?apikey=1fc42576-f294-4305-baaf-9c78e6b88dcc&lang=ru_RU"
                 type="text/javascript">
         </script>
@@ -139,9 +139,12 @@
         </div>
     </main>
     <script src="../js/menu-inserting.js"></script>
-    <script src="../js/edit-event-page-script.js"></script>
     <script src="../js/add-event-image-script.js"></script>
     <script type="module" src="../js/add-event-map-script.js"></script>
+
+    <script src="../js/getRequest.js"></script>
+    <script src="../js/edit-event-page-script.js"></script>
+
     <script type="module" src="../js/add-event-schedule-script.js"></script>
     <script type="module" src="../js/add-event-page-script.js"></script>
     </body>
