--- a/Frontend/html/creation_of_event.html
+++ b/Frontend/html/creation_of_event.html
@@ -37,7 +37,7 @@
 
                     <label class="visually-hidden" for="resp-club-select">Ответственный клуб</label>
                     <select title="Ответственный клуб" name="resp-club" id="resp-club-select">
-                        <option value="Ромашки">-- Ответственный клуб --</option>
+                        <option value="">-- Ответственный клуб --</option>
                     </select>
                     <div class="coach-and-rank">
                         <label class="visually-hidden" for="lead-coach">ФИО ведущего тренера</label>
@@ -138,6 +138,10 @@
     <script src="../js/menu-inserting.js"></script>
     <script src="../js/add-event-image-script.js"></script>
     <script type="module" src="../js/add-event-map-script.js"></script>
+
+    <script src="../js/getRequest.js"></script>
+    <script type="module" src="../js/event-page-add-clubs.js"></script>
+
     <script type="module" src="../js/add-event-schedule-script.js"></script>
     <script type="module" src="../js/add-event-page-script.js"></script>
     </body>
