--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -4,12 +4,13 @@
       <meta charset="UTF-8">
       <title>Мой профиль</title>
       <link rel="stylesheet" href="../css/profile-style.css">
-      <script src="../js/go-to-auth-error-enter.js"></script>
+<!--      <script src="../js/go-to-auth-error-enter.js"></script>-->
 </head>
   <body>
      <div class="wrapper">
        <!-- Menu inserting here by JS -->
         <div class="container content">
+<!--          Base info about people-->
           <div class="row base-info">
             <img src="../assets/photo1.jpg" alt="" class="col-sm-6 col-md-3 photo" id="photo">
             <div class="col-6 md-col-2 fio"> 
@@ -25,6 +26,35 @@
               <button class="col-4 col-md-12" id="id-button">ID #0000</button>
             </div>
           </div>
+
+<!--          Block with current and next rank-->
+          <div class="row container current-achievment">
+            <div class="col-md-5 card-block">
+              <h3>Текущий ранг</h3>
+              <div class="card">
+                <div class="prog">
+                  <div class="progress-done" data-done="100">
+                    3 кю
+                  </div>
+                </div>
+                <p>X центральный семинар по прикладному айкидо</p>
+                <p class="date">12.12.2022</p>
+              </div>
+            </div>
+            <div class="col-md-5 card-block">
+              <h3>Следующий ранг</h3>
+              <div class="card">
+                <div class="prog">
+                  <div class="progress-done" data-done="80">
+                    2 кю
+                  </div>
+                </div>
+                <p>Дата возможности получения:</p>
+                <p class="date">12.12.2022</p>
+              </div>
+            </div>
+          </div>
+
           <div class="row container achievment">
             <h2 class="row">История достижений</h2>
 
@@ -37,8 +67,8 @@
                     1 дан
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="2dan">
@@ -46,8 +76,8 @@
                     2 дан
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="3dan">
@@ -55,8 +85,8 @@
                     3 дан
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="4dan">
@@ -64,8 +94,8 @@
                     4 дан
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
               </div>
@@ -78,8 +108,8 @@
                     1 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="2ku">
@@ -87,8 +117,8 @@
                     2 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="3ku">
@@ -96,8 +126,8 @@
                     3 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="4ku">
@@ -105,8 +135,8 @@
                     4 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="5ku">
@@ -114,8 +144,8 @@
                     5 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
               </div>
@@ -127,8 +157,8 @@
                     1 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="2ku-child">
@@ -136,8 +166,8 @@
                     2 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="3ku-child">
@@ -145,8 +175,8 @@
                     3 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="4ku-child">
@@ -154,8 +184,8 @@
                     4 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
-                    <p id ="date">Не определено</p>
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
                   </div>
                 </div>
                 <div class="achievment-block not-reached row" id="5ku-child">
@@ -163,7 +193,7 @@
                     5 кю
                   </div>
                   <div class="achievment-info col-9">
-                    <p id="name">Нет в базе</p>
+                    <p name="name">Нет в базе</p>
                     <p id ="date">Не определено</p>
                   </div>
                 </div>
